@@ -1,21 +1,20 @@
 package org.example.stats;
 
 import lombok.extern.log4j.Log4j2;
+import org.example.PatternName;
 
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 @Log4j2
 public class IntegerStats implements Stats {
-    private long average = 0;
+    private final Map<String, Object> metadata = new LinkedHashMap<>();
     private long max = Integer.MIN_VALUE;
     private long min = Integer.MAX_VALUE;
     private long sum = 0;
     private long count = 0;
-
-    private final Map<String, Object> metadata = new LinkedHashMap<>();
 
     @Override
     public void collect(List<String> lines, String fileName) {
@@ -31,20 +30,17 @@ public class IntegerStats implements Stats {
             }
         }
 
-        long average = count > 0 ? (sum / count) : 0;
-
-        System.out.printf("File: %s\n\tInteger Stats ->\n\tSum: %d,\n\tMax: %d,\n\tMin: %d,\n\tAverage: %d\n",
-                fileName, sum, max, min, average);
-        metadata.put("Type", "Integer");
-        metadata.put("fileName", fileName);
-        metadata.put("sum", String.valueOf(sum));
-        metadata.put("max", String.valueOf(max));
-        metadata.put("min", String.valueOf(min));
-        metadata.put("average", String.valueOf(average));
+        double average = count > 0 ? ((double) sum / count) : 0;
+        metadata.put("Type", PatternName.INTEGER);
+        metadata.put("File Name", fileName);
+        metadata.put("sum", sum);
+        metadata.put("max", max);
+        metadata.put("min", min);
+        metadata.put("average", average);
     }
 
     @Override
     public Map<String, Object> getMetadata() {
-        return Map.of();
+        return Collections.unmodifiableMap(metadata);
     }
 }
